arm64: dts: sm8150-v2: bump prime freq
improve latency sensitive tasks

--- a/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
@@ -45,8 +45,6 @@
 		<2419200>;
 
 	qcom,cpufreq-table-7 =
-		<1804800>,
-		<2016000>,
 		<2227200>,
 		<2323200>,
 		<2534400>,
@@ -474,8 +472,6 @@
 
 	CPU_COST_2: core-cost2 {
 		busy-cost-data = <
-			1804800  446
-			2016000  513
 			2227200  622
 			2323200  704
 			2534400  824
@@ -514,8 +510,6 @@
 
 	CLUSTER_COST_2: cluster-cost2 {
 		busy-cost-data = <
-			1804800   77
-			2016000  100
 			2227200  120
 			2323200  128
 			2534400  140
@@ -1360,15 +1354,15 @@
 			reg = <5>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <1401600>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <72000>;
 		};
 
 		zone@6 {
 			reg = <6>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1401600>;
-			qcom,prime-khz = <1804800>;
+			qcom,gold-khz = <940800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <74000>;
 		};
 
@@ -1376,7 +1370,7 @@
 			reg = <7>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <76000>;
 		};
 
@@ -1384,7 +1378,7 @@
 			reg = <8>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <78000>;
 		};
 
@@ -1392,7 +1386,7 @@
 			reg = <9>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <80000>;
 		};
 
@@ -1400,7 +1394,7 @@
 			reg = <10>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <82000>;
 		};
 
@@ -1408,7 +1402,7 @@
 			reg = <11>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <85000>;
 		};
 
@@ -1416,7 +1410,7 @@
 			reg = <12>;
 			qcom,silver-khz = <1708800>;
 			qcom,gold-khz = <940800>;
-			qcom,prime-khz = <1804800>;
+			qcom,prime-khz = <2227200>;
 			qcom,trip-deg = <90000>;
 		};
 	};
