--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -146,6 +146,7 @@ CONFIG_PELT_UTIL_HALFLIFE_24=y
 #
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=7
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
@@ -176,7 +177,7 @@ CONFIG_UTS_NS=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
-CONFIG_SCHED_TUNE=y
+# CONFIG_SCHED_TUNE is not set
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="0-3,5-6"
 CONFIG_CPUSET_BG="0-3"
