gulch_defconfig: regen
bump llcbw boost after jitter and jank testing on op7pro by zero too

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -16,8 +16,6 @@ CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
-CONFIG_GENERIC_BUG=y
-CONFIG_GENERIC_BUG_RELATIVE_POINTERS=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CSUM=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
@@ -187,7 +185,7 @@ CONFIG_CPUSET_FG="0-3,5-6"
 CONFIG_CPUSET_RESTRICTED="0-3"
 CONFIG_CPUSET_SYSTEM_BG="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
-CONFIG_STUNE_ASSIST=y
+CONFIG_SCHED_TUNE_DUMMY=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
@@ -219,7 +217,7 @@ CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ABSOLUTE_PERCPU is not set
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_PRINTK=y
-CONFIG_BUG=y
+# CONFIG_BUG is not set
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
@@ -797,7 +795,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=58
+CONFIG_INPUT_BOOST_DURATION_MS=64
 CONFIG_WAKE_BOOST_DURATION_MS=1000
 CONFIG_INPUT_BOOST_FREQ_LP=1382400
 CONFIG_INPUT_BOOST_FREQ_PERF=1286400
@@ -4672,10 +4670,10 @@ CONFIG_QCOM_DEVFREQ_DEVBW=y
 # CONFIG_DEVFREQ_SPDM is not set
 CONFIG_DEVFREQ_GOV_CDSPL3=y
 CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
-CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=2597
+CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5161
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
