--- a/arch/arm64/configs/gulch_sdcardfs_defconfig
+++ b/arch/arm64/configs/gulch_sdcardfs_defconfig
@@ -794,6 +794,12 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT_PRIME=6000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_PRIME=1000
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT_BIG=3000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_BIG=1000
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT_LITTLE=10000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_LITTLE=20000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
@@ -810,8 +816,6 @@ CONFIG_CPU_FREQ_MIN_PERFP=0
 CONFIG_CPU_FREQ_IDLE_LP=0
 CONFIG_CPU_FREQ_IDLE_PERF=0
 CONFIG_CPU_FREQ_IDLE_PERFP=0
-CONFIG_SCHEDUTIL_UP_RATE_LIMIT=10000
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 
 #
 # CPU frequency scaling drivers
@@ -3263,6 +3267,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
+CONFIG_DRM_MSM_KCAL_CTRL=y
 # CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_MSM_LEASE is not set
@@ -3398,7 +3403,6 @@ CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 # CONFIG_VGASTATE is not set
 CONFIG_HDMI=y
 # CONFIG_LOGO is not set
-CONFIG_KLAPSE=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -5192,6 +5196,10 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_F2FS_FS_COMPRESSION is not set
 # CONFIG_F2FS_REPORT_FAKE_KERNEL_VERSION is not set
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:exfat:s0"
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
