--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -801,21 +801,7 @@ CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_BIG=2000
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT_LITTLE=30000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_LITTLE=10000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=64
-CONFIG_WAKE_BOOST_DURATION_MS=1000
-CONFIG_INPUT_BOOST_FREQ_LP=1785600
-CONFIG_INPUT_BOOST_FREQ_PERF=1804800
-CONFIG_INPUT_BOOST_FREQ_PERFP=2534400
-CONFIG_MAX_BOOST_FREQ_LP=1785600
-CONFIG_MAX_BOOST_FREQ_PERF=2016000
-CONFIG_MAX_BOOST_FREQ_PERFP=2841600
-CONFIG_CPU_FREQ_MIN_LP=0
-CONFIG_CPU_FREQ_MIN_PERF=0
-CONFIG_CPU_FREQ_MIN_PERFP=0
-CONFIG_CPU_FREQ_IDLE_LP=0
-CONFIG_CPU_FREQ_IDLE_PERF=0
-CONFIG_CPU_FREQ_IDLE_PERFP=0
+# CONFIG_CPU_INPUT_BOOST is not set
 
 #
 # CPU frequency scaling drivers
